chroe(be): use camel case instead of sneaky case for returning json resposne
